# fourier-draw

./: .clang-tidy  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
src/: Dft.cpp  Dft.hpp  Epicycle.cpp  Epicycle.hpp  Epicycles.cpp  Epicycles.hpp  Line.cpp  Line.hpp  dft.cpp  dft.h  epicycle.cpp  epicycle.h  epicycles.cpp  epicycles.h  line.cpp  line.h  main.cpp
